diss: sets of desirable gambles

--- a/defs.tex
+++ b/defs.tex
@@ -8,6 +8,8 @@
 \def\com{\ensuremath{{\mbox{\!\scriptsize\textsf{C}}}}}
 
 \newcommand{\reals}{\mathbb{R}}
+\newcommand{\posreals}{\reals_{>0}}
+\newcommand{\naturals}{\mathbb{N}}
 
 \newcommand{\dd}{\,\mathrm{d}}
 
@@ -70,7 +72,8 @@
 \newcommand{\V}{\operatorname{Var}}
 \newcommand{\med}{\operatorname{med}} % Median
 \newcommand{\modus}{\operatorname{mode}} % Mode
-\newcommand{\logit}{\operatorname{logit}} % Mode
+\newcommand{\logit}{\operatorname{logit}} % logit
+\newcommand{\posi}{\operatorname{posi}} % positive cone
 
 \def\El{\ul{\E}}
 \def\Eu{\ol{\E}}
