--- a/intro.tex
+++ b/intro.tex
@@ -49,7 +49,7 @@ is not maintained throughout most of the thesis.
 
 Sets or spaces are given as calligraphic uppercase letters ($\mathcal{X}$, $\Y$, $\mathcal{M}$).
 Some special sets are denoted as follows:
-the real numbers by $\reals$, positive real numbers by $\reals_{>0}$,
+the real numbers by $\reals$, positive real numbers by $\posreals$,
 and the space of $q$-dimensional tuples of real numbers by $\reals^q$.
 
 In the Bayesian setting, prior and posterior probability distributions (on parameters) are usually denoted by lowercase letter $p$,
