diss: small changes to previous commits

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -266,10 +266,10 @@ i.e., there exist two propositions in the set of propositions
 Continuing this analogy, $\El$ violating the stronger property of \emph{coherence}
 is like the ``failure to deduce all [\ldots] logical implications''
 \parencite[\S 2.4, footnote~1]{1991:walley} from the set of propositions.
-As an example, if a subject assesses $\El$ such that $\El[X] = \El[Y] = \frac{1}{2}$,
-and also that $\El[X+Y] = \frac{1}{2}$, $\El$ avoids sure loss, but is not coherent,
-because one can imply from $\El[X] = \El[Y] = \frac{1}{2}$ that
-$\El[X+Y]$ must be larger than $\frac{1}{2}$ \parencite[p.~67]{1991:walley}.
+As an example, if a subject assesses $\El$ such that $\El[X] = \El[Y] = \frac{1}{4}$,
+and also that $\El[X+Y] = \frac{1}{4}$, $\El$ avoids sure loss, but is not coherent,
+because one can imply from $\El[X] = \El[Y] = \frac{1}{4}$ that
+$\El[X+Y]$ must be at least $\frac{1}{2}$ \parencite[p.~67]{1991:walley}.
 Coherence is a ``normative requirement of consistency'' \parencite[p.~130]{2000:walley::towards}
 that is a consequence of few basic rationality requirements.
 In fact, if $\mathcal{K}$ is a linear space of gambles,
@@ -292,7 +292,7 @@ for which this condition may not be reasonable.
 This property of superlinearity implies that the supremum acceptable buying price for $X$ and $Y$ combined
 should be higher than the supremum acceptable buying prices for each of them individually.
 It could be, e.g., that $X$ and $Y$ balance out each other in a way that
-buying both of them at once makes the transaction less risky than buying the two separately,
+buying both of them at once makes the transaction less risky,
 such that a higher price limit for $X + Y$ is acceptable.
 Usual precise expectations, for which additivity $\E[X+Y] = \E[X] + \E[Y]$ must hold,
 cannot directly accommodate such reasoning.
@@ -377,9 +377,9 @@ where a partial ordering of the gambles in $\mathcal{L}$ is given to express bel
 
 \paragraph{Sets of Probability Distributions}
 
-We turn now to the formulation of imprecise probability distributions
+We now turn to the formulation of an imprecise probability assessments
 as sets of (precise) probability distributions,
-the formulation applied in thsi thesis.
+the formulation applied in this thesis.
 
 
 link to lower previsions, convexity, coherence.
