diss: small corrections for previous commit

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -416,7 +416,7 @@ and in this case, $\El$ is called the \emph{lower envelope} of $\E_p$, $p \in \m
 
 There are very important relations between the notions of avoiding sure loss and coherence on the one hand,
 and the formulation of imprecise probability assessments via sets of probability distributions on the other hand.
-The two equivalences below are known as the \emph{lower envelope theorem} \cite[\S 3.3.3]{1991:walley}.
+The two equivalences below are known as the \emph{lower envelope theorem} \parencite[\S 3.3.3]{1991:walley}.
 \begin{enumerate}[(a)]
 \item $\El$ avoids sure loss if and only if the corresponding set $\mathcal{M}$ is non-empty.
 Thus, an assessment $\El$ for which there is no compatible probability distribution
@@ -442,7 +442,7 @@ because lower and upper previsions derived from $\mathcal{M}$ are automatically 
 %
 %itip sec.3.2.2, 3.3.3
 
-\paragraph{Inference Procedure}
+\subsection{Inference Procedure}
 
 GBR: coherence of prior and posterior
 
