--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -201,3 +201,26 @@
   address = {New York},
   note = {Second edition (with new material) 1980}
 }
+
+@BOOK{2000:rios,
+  title = {Robust {B}ayesian Analysis},
+  publisher = {Springer},
+  year = {2000},
+  editor = {R\'{\i}os Insua, D. and Ruggeri, F.}
+}
+
+@INCOLLECTION{2005:ruggeri,
+  author = {F. Ruggeri and D. R\'{\i}os Insua and J. Mart\'{\i}n},
+  title = {Robust {B}ayesian Analysis},
+  booktitle = {Handbook of Statistics. Bayesian Thinking: Modeling and Computation},
+  publisher = {Elsevier},
+  year = {2005},
+  editor = {D. Dey and C. Rao},
+  volume = {25},
+  pages = {623 - 667},
+  bdsk-url-1 = {http://dx.doi.org/10.1016/S0169-7161(05)25021-6},
+  doi = {10.1016/S0169-7161(05)25021-6},
+  issn = {0169-7161}
+}
+
+
